--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,18 +9,21 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">27,169</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">12</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">397,845</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Inkbox.Tests.AddToCartTest</td><td><a href="#m0">AddItemsToCart</a></td><td rowspan="1">1625063368372</td><td rowspan="1">19213</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">Inkbox.Tests.CartTest</td><td><a href="#m0">AddItemsToCart_without_Login_and_ValidateAfterLogin</a></td><td rowspan="1">1625578076060</td><td rowspan="1">30159</td></tr><tr class="passedeven"><td><a href="#m1">IncreamentProduct_InCart_And_Remove_Items_In_Cart</a></td><td rowspan="1">1625578009678</td><td rowspan="1">60241</td></tr><tr class="passedeven"><td><a href="#m2">ValidateItems_Adding_To_Cart</a></td><td rowspan="1">1625577958086</td><td rowspan="1">40971</td></tr><tr class="passedodd"><td rowspan="2">Inkbox.Tests.HomePageTest</td><td><a href="#m3">ProductsDisplayed_are_Clicable_And_Move_To_PDP</a></td><td rowspan="1">1625577796194</td><td rowspan="1">26927</td></tr><tr class="passedodd"><td><a href="#m4">ValidateUserImage_Changepassword</a></td><td rowspan="1">1625577774244</td><td rowspan="1">15485</td></tr><tr class="passedeven"><td rowspan="3">Inkbox.Tests.LoginTest</td><td><a href="#m5">LoginWithDirectUser</a></td><td rowspan="1">1625577714985</td><td rowspan="1">10331</td></tr><tr class="passedeven"><td><a href="#m6">LoginWithFacebook</a></td><td rowspan="1">1625577732148</td><td rowspan="1">11713</td></tr><tr class="passedeven"><td><a href="#m7">LoginWithGoogle</a></td><td rowspan="1">1625577751247</td><td rowspan="1">16988</td></tr><tr class="passedodd"><td rowspan="4">Inkbox.Tests.ProductSearchTest</td><td><a href="#m8">Autosuggestion_Validation</a></td><td rowspan="1">1625577828949</td><td rowspan="1">15757</td></tr><tr class="passedodd"><td><a href="#m9">SortByPriceLowToHigh</a></td><td rowspan="1">1625577855299</td><td rowspan="1">28763</td></tr><tr class="passedodd"><td><a href="#m10">SortBySize</a></td><td rowspan="1">1625577890272</td><td rowspan="1">27768</td></tr><tr class="passedodd"><td><a href="#m11">ValidatePresentUrl_with_PreviousUrl</a></td><td rowspan="1">1625577924564</td><td rowspan="1">27120</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">Inkbox.Tests.AddToCartTest#AddItemsToCart</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NumberFormatException: For input string: &quot;&quot;
-	at java.base/java.lang.NumberFormatException.forInputString(NumberFormatException.java:67)
-	at java.base/java.lang.Integer.parseInt(Integer.java:670)
-	at java.base/java.lang.Integer.parseInt(Integer.java:778)
-	at Inkbox.Pages.CartPage.GetNumberOfItemInCart(CartPage.java:31)
-	at Inkbox.Pages.CartPage.ValidateNumberOfItemInCart(CartPage.java:40)
-	at Inkbox.Tests.AddToCartTest.AddItemsToCart(AddToCartTest.java:69)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">Inkbox.Tests.CartTest#AddItemsToCart_without_Login_and_ValidateAfterLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Inkbox.Tests.CartTest#IncreamentProduct_InCart_And_Remove_Items_In_Cart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Inkbox.Tests.CartTest#ValidateItems_Adding_To_Cart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">Inkbox.Tests.HomePageTest#ProductsDisplayed_are_Clicable_And_Move_To_PDP</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">Inkbox.Tests.HomePageTest#ValidateUserImage_Changepassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">Inkbox.Tests.LoginTest#LoginWithDirectUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">Inkbox.Tests.LoginTest#LoginWithFacebook</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">Inkbox.Tests.LoginTest#LoginWithGoogle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">Inkbox.Tests.ProductSearchTest#Autosuggestion_Validation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">Inkbox.Tests.ProductSearchTest#SortByPriceLowToHigh</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m10">Inkbox.Tests.ProductSearchTest#SortBySize</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m11">Inkbox.Tests.ProductSearchTest#ValidatePresentUrl_with_PreviousUrl</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
