--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,8 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>Helpers.LaunchDriver.beforeSuite</td></tr>
+<tr><td>Helpers.LaunchDriver.beforeSuite</td></tr>
+<tr><td>Helpers.LaunchDriver.beforeSuite</td></tr>
+<tr><td>Helpers.LaunchDriver.beforeTest</td></tr>
+<tr><td>Helpers.LaunchDriver.beforeTest</td></tr>
+<tr><td>Helpers.LaunchDriver.beforeTest</td></tr>
 </table>
