--- a/OldReports/Report06_07_2021_09_11_15.html
+++ b/OldReports/Report06_07_2021_09_11_15.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2021-06-30 10:29:48</span>
+					<span class='suite-started-time'>2021-07-06 09:11:15</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 27s+111ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 56s+751ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 27s+111ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 41s+759ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2021-06-30 10:29:21</span> 
+							<span class='panel-lead suite-started-time'>2021-07-06 09:10:19</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2021-06-30 10:29:48</span> 
+							<span class='panel-lead suite-ended-time'>2021-07-06 09:11:15</span> 
 						</div> 
 					</div>
 				</div>
@@ -237,17 +237,17 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active fail ' extentid='d367de3b-1cdb-4e8f-bab6-8887463b8ddc'>
+										<li class='collection-item test displayed active pass ' extentid='8fd50a12-01d7-43ba-90df-1c07df2b2d4e'>
 											<div class='test-head'>
-												<span class='test-name'>User Login </span>
-												<span class='test-status label right outline capitalize fail'>fail</span>
+												<span class='test-name'>LoginWithDirectUser </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-06-30 10:29:21</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-06-30 10:29:48</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 26s+872ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-07-06 09:10:19</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-07-06 09:10:30</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 11s+0ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -264,33 +264,117 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>10:29:33</td>
-																	<td class='step-details'>Add is Closed</td>
+																	<td class='timestamp'>09:10:25</td>
+																	<td class='step-details'>UserName :testinkbox@gmail.com</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>10:29:34</td>
-																	<td class='step-details'>Clicked on Account Icon</td>
+																	<td class='timestamp'>09:10:25</td>
+																	<td class='step-details'>Password :Test@123</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>09:10:30</td>
+																	<td class='step-details'>Clicked on Login button</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>10:29:37</td>
-																	<td class='step-details'>My Account</td>
+																	<td class='timestamp'>09:10:30</td>
+																	<td class='step-details'>Login Success</td>
+																</tr>
+														</tbody>
+													</table>
+													<ul class='collapsible node-list' data-collapsible='accordion'>
+													</ul>
+												</div>
+											</div>
+										</li>
+										<li class='collection-item test displayed active pass ' extentid='0fc56cde-1343-411e-9fd5-8d85d0782d52'>
+											<div class='test-head'>
+												<span class='test-name'>LoginWithFacebook </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
+												<span class='category-assigned hide '></span>
+											</div>
+											<div class='test-body'>
+												<div class='test-info'>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-07-06 09:10:39</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-07-06 09:10:52</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 13s+0ms</span>
+												</div>
+												<div class='test-desc'></div>
+												<div class='test-attributes'>
+												</div>
+												<div class='test-steps'>
+													<table class='bordered table-results'>
+														<thead>
+															<tr>
+																<th>Status</th>
+																<th>Timestamp</th>
+																<th>Details</th>
+															</tr>
+														</thead>
+														<tbody>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>09:10:45</td>
+																	<td class='step-details'>UserName :testinkbox@gmail.com</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>09:10:45</td>
+																	<td class='step-details'>UserName :Inkbox!123</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>10:29:43</td>
-																	<td class='step-details'>Product : is added</td>
+																	<td class='timestamp'>09:10:52</td>
+																	<td class='step-details'>Login Success</td>
+																</tr>
+														</tbody>
+													</table>
+													<ul class='collapsible node-list' data-collapsible='accordion'>
+													</ul>
+												</div>
+											</div>
+										</li>
+										<li class='collection-item test displayed active pass ' extentid='f846f9d7-1ab8-4525-9bfe-032e7af38afe'>
+											<div class='test-head'>
+												<span class='test-name'>LoginWithGoogle </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
+												<span class='category-assigned hide '></span>
+											</div>
+											<div class='test-body'>
+												<div class='test-info'>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-07-06 09:10:58</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-07-06 09:11:15</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 16s+777ms</span>
+												</div>
+												<div class='test-desc'></div>
+												<div class='test-attributes'>
+												</div>
+												<div class='test-steps'>
+													<table class='bordered table-results'>
+														<thead>
+															<tr>
+																<th>Status</th>
+																<th>Timestamp</th>
+																<th>Details</th>
+															</tr>
+														</thead>
+														<tbody>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>09:11:06</td>
+																	<td class='step-details'>EmailId :testinkbox@gmail.com</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>09:11:11</td>
+																	<td class='step-details'>Password :Inkbox!123</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>10:29:44</td>
-																	<td class='step-details'>Product : is added 2nd time.</td>
-																</tr>
-																<tr>
-																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
-																	<td class='timestamp'>10:29:48</td>
-																	<td class='step-details'><a href='C:\Users\IBCK-WL-037\Inkbox_WorkSpace\Inkbox_UITestFramework/test-output/screenshotsAddItemsToCart30_06_21_10_29_47.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\IBCK-WL-037\Inkbox_WorkSpace\Inkbox_UITestFramework/test-output/screenshotsAddItemsToCart30_06_21_10_29_47.png' /></a></td>
+																	<td class='timestamp'>09:11:15</td>
+																	<td class='step-details'>Login Success</td>
 																</tr>
 														</tbody>
 													</table>
