Latest upadted code

--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -11,11 +11,19 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ValidateUserImage_Changepassword</td>
+<td>Verify_Display_of_Products_on_Homepage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>VerifypopularCategories</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>ProductsDisplayed_are_Clicable_And_Move_To_PDP</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Verify_Changepassword</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -57,11 +65,15 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>IncreamentProduct_InCart_And_INC_145_cannot_remove_item_from_cart</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>ValidateItems_Adding_To_Cart</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>IncreamentProduct_InCart_And_Remove_Items_In_Cart</td>
+<td>VerifyFreeShippingMessage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -104,6 +116,14 @@
 <tr>
 <td>&nbsp;</td>
 <td>SortBySize</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Verify_SearchResults</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>ValidatePricingBlock</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
