--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,8 +1,4 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>Helpers.LaunchDriver.beforeSuite</td></tr>
-<tr><td>Helpers.LaunchDriver.beforeSuite</td></tr>
-<tr><td>Helpers.LaunchDriver.beforeSuite</td></tr>
-<tr><td>Helpers.LaunchDriver.beforeTest</td></tr>
-<tr><td>Helpers.LaunchDriver.beforeTest</td></tr>
-<tr><td>Helpers.LaunchDriver.beforeTest</td></tr>
+<tr><td>Inkbox.Tests.LoginTest.LoginWithFacebook</td></tr>
+<tr><td>Inkbox.Tests.LoginTest.LoginWithGoogle</td></tr>
 </table>
