added testng.xml files

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,15 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>BaseTest.Base</td>
+<td>Inkbox.Tests.LoginTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Setup</td>
-<td>&nbsp;</td></tr>
+<td>LoginWithFacebook</td>
+<td>smoketest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>LoginWithDirectUser</td>
+<td>smoketest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>LoginWithGoogle</td>
+<td>smoketest </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -20,8 +31,24 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>beforeMethod</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>BeforeMethod</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>AfterMethod</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>afterMethod</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
