--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,4 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>Inkbox.Tests.LoginTest.LoginWithFacebook</td></tr>
+<tr><td>Inkbox.Tests.LoginTest.LoginWithGoogle</td></tr>
 </table>
