--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="689886">  <td>21/06/24 14:19:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Base.Setup()[pri:0, instance:BaseTest.Base@6a400542]">Setup</td> 
-  <td>main@899644639</td>   <td></td> </tr>
-<tr bgcolor="d0fbae">  <td>21/06/24 14:19:34</td>   <td>5149</td> <td title="&lt;&lt;LaunchDriver.afterSuite()[pri:0, instance:BaseTest.Base@6a400542]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@899644639</td>   <td></td> </tr>
-<tr bgcolor="d0fbae">  <td>21/06/24 14:19:11</td>   <td>-17216</td> <td title="&gt;&gt;LaunchDriver.beforeSuite()[pri:0, instance:BaseTest.Base@6a400542]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@899644639</td>   <td></td> </tr>
+<tr bgcolor="80cb77">  <td>21/07/12 11:25:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.AfterMethod(org.testng.ITestResult)[pri:0, instance:Inkbox.Tests.LoginTest@708f5957]">&lt;&lt;AfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1325124186</td>   <td></td> </tr>
+<tr bgcolor="80cb77">  <td>21/07/12 11:25:04</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.BeforeMethod(org.testng.ITestResult)[pri:0, instance:Inkbox.Tests.LoginTest@708f5957]">&gt;&gt;BeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1325124186</td>   <td></td> </tr>
+<tr bgcolor="80cb77">  <td>21/07/12 11:25:04</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginWithDirectUser()[pri:0, instance:Inkbox.Tests.LoginTest@708f5957]">LoginWithDirectUser</td> 
+  <td>main@1325124186</td>   <td></td> </tr>
+<tr bgcolor="aa6a6a">  <td>21/07/12 11:25:04</td>   <td>191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchDriver.afterMethod()[pri:0, instance:Inkbox.Tests.LoginTest@708f5957]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1325124186</td>   <td></td> </tr>
+<tr bgcolor="aa6a6a">  <td>21/07/12 11:25:04</td>   <td>-181</td> <td title="&gt;&gt;LaunchDriver.beforeSuite()[pri:0, instance:Inkbox.Tests.LoginTest@708f5957]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325124186</td>   <td></td> </tr>
+<tr bgcolor="aa6a6a">  <td>21/07/12 11:25:04</td>   <td>-142</td> <td>&nbsp;</td><td title="&gt;&gt;LaunchDriver.beforeTest()[pri:0, instance:Inkbox.Tests.LoginTest@708f5957]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325124186</td>   <td></td> </tr>
 </table>
