--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -11,70 +11,39 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>ValidateProfilePage</td>
+<td>smoketest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>Verify_Display_of_Products_on_Homepage</td>
-<td>&nbsp;</td></tr>
+<td>smoketest </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>VerifypopularCategories</td>
-<td>&nbsp;</td></tr>
+<td>smoketest </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>ProductsDisplayed_are_Clicable_And_Move_To_PDP</td>
-<td>&nbsp;</td></tr>
+<td>smoketest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Validate_Footer</td>
+<td>smoketest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Validating_Header</td>
+<td>regression </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>Verify_Changepassword</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
+<td>smoketest </td>
 </tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>beforeMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>BeforeMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>AfterMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>afterMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>Inkbox.Tests.CartTest</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>AddItemsToCart_without_Login_and_ValidateAfterLogin</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>IncreamentProduct_InCart_And_INC_145_cannot_remove_item_from_cart</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ValidateItems_Adding_To_Cart</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>VerifyFreeShippingMessage</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -111,74 +80,34 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Autosuggestion_Validation</td>
-<td>&nbsp;</td></tr>
+<td>SortBySize</td>
+<td>smoketest </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
-<td>SortBySize</td>
-<td>&nbsp;</td></tr>
+<td>Autosuggestion_Validation</td>
+<td>smoketest </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>Verify_SearchResults</td>
-<td>&nbsp;</td></tr>
+<td>smoketest </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>ValidatePricingBlock</td>
-<td>&nbsp;</td></tr>
+<td>smoketest </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>SortByPriceLowToHigh</td>
-<td>&nbsp;</td></tr>
+<td>regression </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>ValidatePresentUrl_with_PreviousUrl</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
+<td>smoketest </td>
 </tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>beforeMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>BeforeMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>AfterMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>afterMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>Inkbox.Tests.LoginTest</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>LoginWithFacebook</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>LoginWithDirectUser</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>LoginWithGoogle</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
