--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,1 +1,3 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>ProductSearchTest.SortByPriceLowToHigh()[pri:0, instance:Inkbox.Tests.ProductSearchTest@6dc17b83]<br/>HomePageTest.Validating_Header()[pri:0, instance:Inkbox.Tests.HomePageTest@5fdcaa40]<br/></td></tr>
+</table>
