--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -26,17 +26,71 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Validate_Footer</td>
-<td>smoketest </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
 <td>ProductsDisplayed_are_Clicable_And_Move_To_PDP</td>
 <td>smoketest </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>Validate_Footer</td>
+<td>smoketest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>Verify_Changepassword</td>
+<td>smoketest </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>beforeMethod</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>BeforeMethod</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>AfterMethod</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>afterMethod</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>Inkbox.Tests.CartTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>AddItemsToCart_without_Login_and_ValidateAfterLogin</td>
+<td>smoketest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>IncreamentProduct_InCart_And_INC_145_cannot_remove_item_from_cart</td>
+<td>smoketest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ValidateItems_Adding_To_Cart</td>
+<td>smoketest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>VerifyFreeShippingMessage</td>
 <td>smoketest </td>
 </tr>
 <tr>
@@ -75,12 +129,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>SortBySize</td>
+<td>Autosuggestion_Validation</td>
 <td>smoketest </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Autosuggestion_Validation</td>
+<td>SortBySize</td>
 <td>smoketest </td>
 </tr>
 <tr>
@@ -101,6 +155,55 @@
 <tr>
 <td>&nbsp;</td>
 <td>ValidatePresentUrl_with_PreviousUrl</td>
+<td>smoketest </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>beforeMethod</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>BeforeMethod</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>AfterMethod</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>afterMethod</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>Inkbox.Tests.LoginTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>LoginWithFacebook</td>
+<td>smoketest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>LoginWithDirectUser</td>
+<td>smoketest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>LoginWithGoogle</td>
 <td>smoketest </td>
 </tr>
 <tr>
