added config files,backup testng reports

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,67 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">14</td><td class="num">0</td><td class="num">0</td><td class="num attn">5</td><td class="num">998,356</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">34,875</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Inkbox.Tests.HomePageTest</td><td><a href="#m0">Verify_Display_of_Products_on_Homepage</a></td><td rowspan="1">1626109602702</td><td rowspan="1">29057</td></tr><tr class="failedodd"><td rowspan="4">Inkbox.Tests.ProductSearchTest</td><td><a href="#m1">SortBySize</a></td><td rowspan="1">1626109844240</td><td rowspan="1">16055</td></tr><tr class="failedodd"><td><a href="#m2">ValidatePresentUrl_with_PreviousUrl</a></td><td rowspan="1">1626109875053</td><td rowspan="1">6155</td></tr><tr class="failedodd"><td><a href="#m3">ValidatePricingBlock</a></td><td rowspan="1">1626109891248</td><td rowspan="1">16035</td></tr><tr class="failedodd"><td><a href="#m4">Verify_SearchResults</a></td><td rowspan="1">1626109921449</td><td rowspan="1">15897</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">Inkbox.Tests.CartTest</td><td><a href="#m5">AddItemsToCart_without_Login_and_ValidateAfterLogin</a></td><td rowspan="1">1626109943733</td><td rowspan="1">39651</td></tr><tr class="passedeven"><td><a href="#m6">IncreamentProduct_InCart_And_INC_145_cannot_remove_item_from_cart</a></td><td rowspan="1">1626109988697</td><td rowspan="1">95060</td></tr><tr class="passedeven"><td><a href="#m7">ValidateItems_Adding_To_Cart</a></td><td rowspan="1">1626110093607</td><td rowspan="1">53172</td></tr><tr class="passedeven"><td><a href="#m8">VerifyFreeShippingMessage</a></td><td rowspan="1">1626110156333</td><td rowspan="1">42541</td></tr><tr class="passedodd"><td rowspan="5">Inkbox.Tests.HomePageTest</td><td><a href="#m9">ProductsDisplayed_are_Clicable_And_Move_To_PDP</a></td><td rowspan="1">1626109274042</td><td rowspan="1">30180</td></tr><tr class="passedodd"><td><a href="#m10">Validate_Footer</a></td><td rowspan="1">1626109310033</td><td rowspan="1">218027</td></tr><tr class="passedodd"><td><a href="#m11">Validating_HomePage</a></td><td rowspan="1">1626109534002</td><td rowspan="1">23251</td></tr><tr class="passedodd"><td><a href="#m12">Verify_Changepassword</a></td><td rowspan="1">1626109566366</td><td rowspan="1">30721</td></tr><tr class="passedodd"><td><a href="#m13">VerifypopularCategories</a></td><td rowspan="1">1626109641704</td><td rowspan="1">102127</td></tr><tr class="passedeven"><td rowspan="3">Inkbox.Tests.LoginTest</td><td><a href="#m14">LoginWithDirectUser</a></td><td rowspan="1">1626109211044</td><td rowspan="1">14229</td></tr><tr class="passedeven"><td><a href="#m15">LoginWithFacebook</a></td><td rowspan="1">1626109231457</td><td rowspan="1">11417</td></tr><tr class="passedeven"><td><a href="#m16">LoginWithGoogle</a></td><td rowspan="1">1626109248581</td><td rowspan="1">15608</td></tr><tr class="passedodd"><td rowspan="2">Inkbox.Tests.ProductSearchTest</td><td><a href="#m17">Autosuggestion_Validation</a></td><td rowspan="1">1626109749515</td><td rowspan="1">38846</td></tr><tr class="passedodd"><td><a href="#m18">SortByPriceLowToHigh</a></td><td rowspan="1">1626109799337</td><td rowspan="1">31491</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Inkbox.Tests.HomePageTest</td><td><a href="#m0">Verify_Display_of_Products_on_Homepage</a></td><td rowspan="1">1626284316703</td><td rowspan="1">29017</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">Inkbox.Tests.HomePageTest#Verify_Display_of_Products_on_Homepage</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError
-	at org.junit.Assert.fail(Assert.java:86)
-	at org.junit.Assert.fail(Assert.java:95)
-	at Helpers.ControlHelpers.getText(ControlHelpers.java:113)
-	at Inkbox.Pages.HomePage.Validating_JustDrop_Products(HomePage.java:45)
-	at Inkbox.Tests.HomePageTest.Verify_Display_of_Products_on_Homepage(HomePageTest.java:55)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Inkbox.Tests.ProductSearchTest#SortBySize</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError
-	at org.junit.Assert.fail(Assert.java:86)
-	at org.junit.Assert.fail(Assert.java:95)
-	at Helpers.ControlHelpers.ButtonClick(ControlHelpers.java:63)
-	at Inkbox.Pages.LoginPage.ClickLogin_link(LoginPage.java:47)
-	at Inkbox.Pages.LoginPage.UserLogin(LoginPage.java:82)
-	at Inkbox.Tests.ProductSearchTest.SortBySize(ProductSearchTest.java:57)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">Inkbox.Tests.ProductSearchTest#ValidatePresentUrl_with_PreviousUrl</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError
-	at org.junit.Assert.fail(Assert.java:86)
-	at org.junit.Assert.fail(Assert.java:95)
-	at Helpers.ControlHelpers.ButtonClick(ControlHelpers.java:63)
-	at Inkbox.Pages.BasePage.AcctountIcon(BasePage.java:121)
-	at Inkbox.Pages.LoginPage.UserLogin(LoginPage.java:80)
-	at Inkbox.Tests.ProductSearchTest.ValidatePresentUrl_with_PreviousUrl(ProductSearchTest.java:75)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">Inkbox.Tests.ProductSearchTest#ValidatePricingBlock</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError
-	at org.junit.Assert.fail(Assert.java:86)
-	at org.junit.Assert.fail(Assert.java:95)
-	at Helpers.ControlHelpers.ButtonClick(ControlHelpers.java:63)
-	at Inkbox.Pages.LoginPage.ClickLogin_link(LoginPage.java:47)
-	at Inkbox.Pages.LoginPage.UserLogin(LoginPage.java:82)
-	at Inkbox.Tests.ProductSearchTest.ValidatePricingBlock(ProductSearchTest.java:83)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">Inkbox.Tests.ProductSearchTest#Verify_SearchResults</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError
-	at org.junit.Assert.fail(Assert.java:86)
-	at org.junit.Assert.fail(Assert.java:95)
-	at Helpers.ControlHelpers.ButtonClick(ControlHelpers.java:63)
-	at Inkbox.Pages.LoginPage.ClickLogin_link(LoginPage.java:47)
-	at Inkbox.Pages.LoginPage.UserLogin(LoginPage.java:82)
-	at Inkbox.Tests.ProductSearchTest.Verify_SearchResults(ProductSearchTest.java:49)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">Inkbox.Tests.CartTest#AddItemsToCart_without_Login_and_ValidateAfterLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">Inkbox.Tests.CartTest#IncreamentProduct_InCart_And_INC_145_cannot_remove_item_from_cart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">Inkbox.Tests.CartTest#ValidateItems_Adding_To_Cart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">Inkbox.Tests.CartTest#VerifyFreeShippingMessage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">Inkbox.Tests.HomePageTest#ProductsDisplayed_are_Clicable_And_Move_To_PDP</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m10">Inkbox.Tests.HomePageTest#Validate_Footer</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m11">Inkbox.Tests.HomePageTest#Validating_HomePage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m12">Inkbox.Tests.HomePageTest#Verify_Changepassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m13">Inkbox.Tests.HomePageTest#VerifypopularCategories</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m14">Inkbox.Tests.LoginTest#LoginWithDirectUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m15">Inkbox.Tests.LoginTest#LoginWithFacebook</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m16">Inkbox.Tests.LoginTest#LoginWithGoogle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m17">Inkbox.Tests.ProductSearchTest#Autosuggestion_Validation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m18">Inkbox.Tests.ProductSearchTest#SortByPriceLowToHigh</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">Inkbox.Tests.HomePageTest#Verify_Display_of_Products_on_Homepage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
