--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,8 +1,9 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>Helpers.LaunchDriver.beforeSuite</td></tr>
-<tr><td>Helpers.LaunchDriver.beforeSuite</td></tr>
-<tr><td>Helpers.LaunchDriver.beforeSuite</td></tr>
-<tr><td>Helpers.LaunchDriver.beforeTest</td></tr>
-<tr><td>Helpers.LaunchDriver.beforeTest</td></tr>
-<tr><td>Helpers.LaunchDriver.beforeTest</td></tr>
+<tr><td>Inkbox.Tests.HomePageTest.Verify_Shop</td></tr>
+<tr><td>Inkbox.Tests.HomePageTest.VerifypopularCategories</td></tr>
+<tr><td>Inkbox.Tests.HomePageTest.Validating_HomePage</td></tr>
+<tr><td>Inkbox.Tests.HomePageTest.ProductsDisplayed_are_Clicable_And_Move_To_PDP</td></tr>
+<tr><td>Inkbox.Tests.HomePageTest.UserImageChangingOrNot</td></tr>
+<tr><td>Inkbox.Tests.HomePageTest.Verify_Changepassword</td></tr>
+<tr><td>Inkbox.Tests.HomePageTest.Validate_Footer</td></tr>
 </table>
