--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -11,6 +11,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>Verify_Shop</td>
+<td>smoketest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>Verify_Display_of_Products_on_Homepage</td>
 <td>regression </td>
 </tr>
@@ -31,179 +36,17 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>UserImageChangingOrNot</td>
+<td>smoketest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>Validate_Footer</td>
 <td>smoketest </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>Verify_Changepassword</td>
-<td>smoketest </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>beforeMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>BeforeMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>AfterMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>afterMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>Inkbox.Tests.CartTest</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>AddItemsToCart_without_Login_and_ValidateAfterLogin</td>
-<td>smoketest </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>IncreamentProduct_InCart_And_INC_145_cannot_remove_item_from_cart</td>
-<td>smoketest </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ValidateItems_Adding_To_Cart</td>
-<td>smoketest </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>VerifyFreeShippingMessage</td>
-<td>smoketest </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>beforeMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>BeforeMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>AfterMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>afterMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>Inkbox.Tests.ProductSearchTest</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>Autosuggestion_Validation</td>
-<td>smoketest </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>SortBySize</td>
-<td>smoketest </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>Verify_SearchResults</td>
-<td>smoketest </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ValidatePricingBlock</td>
-<td>smoketest </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>SortByPriceLowToHigh</td>
-<td>regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ValidatePresentUrl_with_PreviousUrl</td>
-<td>smoketest </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>beforeMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>BeforeMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>AfterMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>afterMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>Inkbox.Tests.LoginTest</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>LoginWithFacebook</td>
-<td>smoketest </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>LoginWithDirectUser</td>
-<td>smoketest </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>LoginWithGoogle</td>
 <td>smoketest </td>
 </tr>
 <tr>
