--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,9 +1,11 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>Inkbox.Tests.HomePageTest.Verify_Shop</td></tr>
-<tr><td>Inkbox.Tests.HomePageTest.VerifypopularCategories</td></tr>
-<tr><td>Inkbox.Tests.HomePageTest.Validating_HomePage</td></tr>
-<tr><td>Inkbox.Tests.HomePageTest.ProductsDisplayed_are_Clicable_And_Move_To_PDP</td></tr>
-<tr><td>Inkbox.Tests.HomePageTest.UserImageChangingOrNot</td></tr>
-<tr><td>Inkbox.Tests.HomePageTest.Verify_Changepassword</td></tr>
-<tr><td>Inkbox.Tests.HomePageTest.Validate_Footer</td></tr>
+<tr><td>Inkbox.Tests.ProductSearchTest.Autosuggestion_Validation</td></tr>
+<tr><td>Inkbox.Tests.ProductSearchTest.SearchResults_Validation</td></tr>
+<tr><td>Inkbox.Tests.ProductSearchTest.SortByPriceHighToLow</td></tr>
+<tr><td>Inkbox.Tests.ProductSearchTest.Autosuggestion_Validation_Negative</td></tr>
+<tr><td>Inkbox.Tests.ProductSearchTest.Verify_SearchResults</td></tr>
+<tr><td>Inkbox.Tests.ProductSearchTest.SortByPriceLowToHigh</td></tr>
+<tr><td>Inkbox.Tests.ProductSearchTest.ValidatePricingBlock</td></tr>
+<tr><td>Inkbox.Tests.ProductSearchTest.FilterBySize</td></tr>
+<tr><td>Inkbox.Tests.ProductSearchTest.ValidatePresentUrl_with_PreviousUrl</td></tr>
 </table>
