--- a/Reports/report.html
+++ b/Reports/report.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2021-07-14 13:39:05</span>
+					<span class='suite-started-time'>2021-07-16 11:14:47</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 29s+175ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 26s+845ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 29s+175ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 26s+845ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2021-07-14 13:38:36</span> 
+							<span class='panel-lead suite-started-time'>2021-07-16 11:14:20</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2021-07-14 13:39:05</span> 
+							<span class='panel-lead suite-ended-time'>2021-07-16 11:14:47</span> 
 						</div> 
 					</div>
 				</div>
@@ -237,17 +237,17 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='1c1e6af3-e35a-44b3-b089-63f99e8d68c3'>
+										<li class='collection-item test displayed active pass ' extentid='e7f0e90f-be45-40c1-b72e-5467f677c0cd'>
 											<div class='test-head'>
-												<span class='test-name'>Verify_Display_of_Products_on_Homepage </span>
+												<span class='test-name'>EmptySearchBox_Validation </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-07-14 13:38:36</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-07-14 13:39:05</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 29s+21ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-07-16 11:14:20</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-07-16 11:14:47</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 26s+702ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -264,23 +264,23 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:38:44</td>
+																	<td class='timestamp'>11:14:28</td>
 																	<td class='step-details'>UserName :testinkbox@gmail.com</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:38:46</td>
-																	<td class='step-details'>Password :Test@123</td>
+																	<td class='timestamp'>11:14:30</td>
+																	<td class='step-details'>Password :Test@1234</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:38:50</td>
+																	<td class='timestamp'>11:14:34</td>
 																	<td class='step-details'>Clicked on Login button</td>
 																</tr>
 																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:39:05</td>
-																	<td class='step-details'>Just Dropped section is not present on HomePage</td>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>11:14:47</td>
+																	<td class='step-details'>Empty Search result redirected to :https://inkbox.com/products/all-tattoos</td>
 																</tr>
 														</tbody>
 													</table>
