--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,49 +4,59 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Inkbox.Tests.HomePageTest</td>
+<td>Inkbox.Tests.ProductSearchTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Verify_Shop</td>
+<td>SearchResults_Validation</td>
 <td>smoketest </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Verify_Display_of_Products_on_Homepage</td>
+<td>Autosuggestion_Validation</td>
+<td>smoketest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Autosuggestion_Validation_Negative</td>
+<td>smoketest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Verify_SearchResults</td>
+<td>smoketest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ValidatePricingBlock</td>
+<td>smoketest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>SortByPriceLowToHigh</td>
 <td>regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifypopularCategories</td>
+<td>EmptySearchBox_Validation</td>
 <td>smoketest </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Validating_HomePage</td>
+<td>FilterBySize</td>
 <td>smoketest </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ProductsDisplayed_are_Clicable_And_Move_To_PDP</td>
-<td>smoketest </td>
+<td>SortByPriceHighToLow</td>
+<td>regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>UserImageChangingOrNot</td>
-<td>smoketest </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>Validate_Footer</td>
-<td>smoketest </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>Verify_Changepassword</td>
+<td>ValidatePresentUrl_with_PreviousUrl</td>
 <td>smoketest </td>
 </tr>
 <tr>
