--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>HomePageTest.Verify_Display_of_Products_on_Homepage()[pri:0, instance:Inkbox.Tests.HomePageTest@7714e963]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>smoketest</td><td>ProductSearchTest.EmptySearchBox_Validation()[pri:0, instance:Inkbox.Tests.ProductSearchTest@498d318c]<br/></td></tr>
 </table>
