--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c1bced">  <td>21/07/14 13:39:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.AfterMethod(org.testng.ITestResult)[pri:0, instance:Inkbox.Tests.HomePageTest@7714e963]">&lt;&lt;AfterMethod</td> 
-<td>&nbsp;</td>  <td>main@691690486</td>   <td></td> </tr>
-<tr bgcolor="c1bced">  <td>21/07/14 13:38:36</td>   <td>-29034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.BeforeMethod(org.testng.ITestResult)[pri:0, instance:Inkbox.Tests.HomePageTest@7714e963]">&gt;&gt;BeforeMethod</td> 
-<td>&nbsp;</td>  <td>main@691690486</td>   <td></td> </tr>
-<tr bgcolor="c1bced">  <td>21/07/14 13:38:36</td>   <td>-29019</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.Verify_Display_of_Products_on_Homepage()[pri:0, instance:Inkbox.Tests.HomePageTest@7714e963]">Verify_Display_of_Products_on_Homepage</td> 
-  <td>main@691690486</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>21/07/14 13:39:05</td>   <td>163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchDriver.afterMethod()[pri:0, instance:Inkbox.Tests.HomePageTest@7714e963]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@691690486</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>21/07/14 13:38:31</td>   <td>-34566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchDriver.beforeMethod(java.lang.String,java.lang.String)[pri:0, instance:Inkbox.Tests.HomePageTest@7714e963]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@691690486</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>21/07/14 13:38:30</td>   <td>-34769</td> <td title="&gt;&gt;LaunchDriver.beforeSuite()[pri:0, instance:Inkbox.Tests.HomePageTest@7714e963]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@691690486</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>21/07/14 13:38:31</td>   <td>-34707</td> <td>&nbsp;</td><td title="&gt;&gt;LaunchDriver.beforeTest()[pri:0, instance:Inkbox.Tests.HomePageTest@7714e963]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@691690486</td>   <td></td> </tr>
+<tr bgcolor="b2a070">  <td>21/07/16 11:14:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProductSearchTest.AfterMethod(org.testng.ITestResult)[pri:0, instance:Inkbox.Tests.ProductSearchTest@498d318c]">&lt;&lt;AfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1278677872</td>   <td></td> </tr>
+<tr bgcolor="b2a070">  <td>21/07/16 11:14:20</td>   <td>-26712</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductSearchTest.BeforeMethod(org.testng.ITestResult)[pri:0, instance:Inkbox.Tests.ProductSearchTest@498d318c]">&gt;&gt;BeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1278677872</td>   <td></td> </tr>
+<tr bgcolor="b2a070">  <td>21/07/16 11:14:20</td>   <td>-26701</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductSearchTest.EmptySearchBox_Validation()[pri:0, instance:Inkbox.Tests.ProductSearchTest@498d318c]">EmptySearchBox_Validation</td> 
+  <td>main@1278677872</td>   <td></td> </tr>
+<tr bgcolor="7aecef">  <td>21/07/16 11:14:47</td>   <td>154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchDriver.afterMethod()[pri:0, instance:Inkbox.Tests.ProductSearchTest@498d318c]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1278677872</td>   <td></td> </tr>
+<tr bgcolor="7aecef">  <td>21/07/16 11:14:14</td>   <td>-33111</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchDriver.beforeMethod(java.lang.String,java.lang.String)[pri:0, instance:Inkbox.Tests.ProductSearchTest@498d318c]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1278677872</td>   <td></td> </tr>
+<tr bgcolor="7aecef">  <td>21/07/16 11:14:14</td>   <td>-33254</td> <td title="&gt;&gt;LaunchDriver.beforeSuite()[pri:0, instance:Inkbox.Tests.ProductSearchTest@498d318c]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1278677872</td>   <td></td> </tr>
+<tr bgcolor="7aecef">  <td>21/07/16 11:14:14</td>   <td>-33212</td> <td>&nbsp;</td><td title="&gt;&gt;LaunchDriver.beforeTest()[pri:0, instance:Inkbox.Tests.ProductSearchTest@498d318c]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1278677872</td>   <td></td> </tr>
 </table>
